--- a/k8s-bstrp/inventory/mgmt-core.ini
+++ b/k8s-bstrp/inventory/mgmt-core.ini
@@ -1,23 +1,18 @@
-# Kubernetes Cluster Inventory
+# Kubernetes Cluster Inventory - Management Core
 # =============================================================================
-# Define your cluster nodes here
+# Core infrastructure cluster: DNS, NTP, LDAP, Bastion, VPN
+# Network: Mgmt-Core-Net (VLAN 10, 10.10.1.0/24)
 #
-# Format: hostname    ansible_host=IP    k8s_role=control_plane|worker
-#
-# Example with 1 control plane + 2 workers:
-#   k8s-master    ansible_host=10.10.1.101    k8s_role=control_plane
-#   k8s-worker1   ansible_host=10.10.1.102    k8s_role=worker
-#   k8s-worker2   ansible_host=10.10.1.103    k8s_role=worker
+# Usage:
+#   ansible-playbook -i inventory/mgmt-core.ini bootstrap-k8s.yml
 
 [k8s_first_control_plane]
-# First control plane node (used for cluster initialization)
 mgmt-core-01    ansible_host=10.10.1.101    k8s_role=control_plane
 
 [k8s_control_plane:children]
 k8s_first_control_plane
 
 [k8s_workers]
-# Worker nodes
 mgmt-core-02    ansible_host=10.10.1.102    k8s_role=worker
 mgmt-core-03    ansible_host=10.10.1.103    k8s_role=worker
 
@@ -29,3 +24,4 @@ k8s_workers
 ansible_user=root
 ansible_password=unix
 ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+cluster_vars_file=mgmt_core
